# 2dgame

./: CMakeLists.txt
src/: main.cpp
src/core/: game.cpp  game.hpp
src/entities/: entities.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp
src/graphics/: renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  textbox.cpp  textbox.hpp
src/input/: input.cpp  input.hpp
src/map/: tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
src/utils/: timer.cpp  timer.hpp
